exports[`test Fills the a simple slot 1`] = `
<div>
  <button>
    Home 1
  </button>
</div>
`;

exports[`test Fills the appropriate slot 1`] = `
Array [
  <div>
    <button>
        Home 2
    </button>
    <button>
        About
    </button>
</div>,
  <div>
    <a
        href="twitter.com/reactjs">
        Twitter
    </a>
</div>,
]
`;

exports[`test Removes the slot and fill. 1`] = `null`;

exports[`test Replaces the contents of the slot with the matching fill when the slot's \`name\` property changes 1`] = `
<div>
  <span>
    Home 1
  </span>
</div>
`;
